fix main menu and pagination end overflowed

--- a/Shadowmere/style.css
+++ b/Shadowmere/style.css
@@ -820,6 +820,14 @@ input[type=range]::-webkit-slider-thumb {
   z-index: 99;
 }
 
+.z-\[30\] {
+  z-index: 30;
+}
+
+.z-\[100\] {
+  z-index: 100;
+}
+
 .col-span-12 {
   grid-column: span 12 / span 12;
 }
@@ -2193,12 +2201,20 @@ input[type=range]::-webkit-slider-thumb {
     margin-bottom: 0px;
   }
 
+  .\32xl\:mb-40 {
+    margin-bottom: 10rem;
+  }
+
   .\32xl\:hidden {
     display: none;
   }
 
   .\32xl\:h-screen {
     height: 100vh;
+  }
+
+  .\32xl\:h-full {
+    height: 100%;
   }
 
   .\32xl\:w-full {
